--- a/next-jest-typescript-app/package.json
+++ b/next-jest-typescript-app/package.json
@@ -2,23 +2,29 @@
   "name": "next-jest-typescript-app",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "@emotion/react": "^11.9.3",
+    "next": "^12.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@types/node": "16.11.7",
     "@types/react": "17.0.35",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "jest": "^27.3.1",
+    "puppeteer": "^15.3.0",
     "typescript": "4.4.4"
   }
 }
